hphp/test/slow/coeffects/memo-4.php.expectf
Fatal error: This method requires a zoned context to be memoized using __PolicyShardedMemoize or __PolicyShardedMemoizeLSB in %s on line 4
